--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ img {vertical-align: middle;}
 /* Slideshow container */
 .slideshow-container {
   max-width: 10000px;
+  height: 500px;
   position: relative;
   margin: auto;
 }
