--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Slide Show</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="arrow l" onclick="prev()">
-            <img src="img/l.png" alt="l">
+            <img src="l.png" alt="l">
         </div>
         <div class="slide slide-1">
              <div class="caption">
@@ -31,7 +31,7 @@
             </div>
        </div>
        <div class="arrow r" onclick="next()">
-            <img src="img/r.png" alt="r">
+            <img src="r.png" alt="r">
         </div>
     </div>
 
