--- a/index.html
+++ b/index.html
@@ -1,95 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Slide Show</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="arrow l" onclick="prev()">
-            <img src="l.png" alt="l">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <title>US News Best Places to Visit</title>
+  </head>
+  <body>
+    <div class="slider">
+      <div class="slide current">
+        <div class="content">
+          <h1>New York City</h1>
+          <p>
+            The city that never sleeps boasts an almost overwhelming number of
+            things to do and see, and chances are each time you visit you'll
+            discover something new. You can see the talented actors and singers
+            who grace Broadway's stages, stroll above the city along the
+            elevated High Line, wander through the sprawling Central Park and
+            explore the numerous museums. New York City is also home to
+            excellent food options.
+          </p>
+          <br />
+          <a href="https://en.wikipedia.org/wiki/New_York_City">Wikipedia</a>
         </div>
-        <div class="slide slide-1">
-             <div class="caption">
-                 <h3>New York</h3>
-                 <p>We love the Big Apple!</p>
-             </div>
+      </div>
+      <div class="slide">
+        <div class="content">
+          <h1>Dubai, United Arab Emirates</h1>
+          <p>
+            Dubai is home to the world's tallest building, the Burj Khalifa, one
+            of the world's largest shopping centers, the Dubai Mall, and one of
+            the only indoor ski resorts in the world, Ski Dubai. In addition to
+            being a city of superlatives, Dubai embraces its Middle Eastern
+            traditions. The best way to immerse yourself is to tour the Jumeirah
+            Mosque and stroll through the gold and spice souks.
+          </p>
+          <br />
+          <a href="https://en.wikipedia.org/wiki/Dubai">Wikipedia</a>
         </div>
-        <div class="slide slide-2">
-            <div class="caption">
-                <h3>Los Angeles</h3>
-                <p>LA is always so much fun!</p>
-            </div>
-       </div>
-       <div class="slide slide-3">
-            <div class="caption">
-                <h3>Bahar Dar</h3>
-                <p>Thank you, Bahar Dar!</p>
-            </div>
-       </div>
-       <div class="arrow r" onclick="next()">
-            <img src="r.png" alt="r">
+      </div>
+      <div class="slide">
+        <div class="content">
+          <h1>Grand Canyon National Park, Arizona</h1>
+          <p>
+            The Grand Canyon is indeed grand, with its colorful rock formations
+            stretching across 277 river miles. One of America's most popular
+            national parks (it attracts around 6 million visitors annually), the
+            Grand Canyon offers ample opportunities for outdoor fun. Visitors
+            can hike the rugged North Rim trails, traverse the Bright Angel
+            Trail by mule and raft down the Colorado River, among other
+            activities.
+          </p>
+          <br />
+          <a href="https://en.wikipedia.org/wiki/Grand_Canyon_National_Park"
+            >Wikipedia</a
+          >
         </div>
+      </div>
+      <div class="slide">
+        <div class="content">
+          <h1>Phuket, Thailand</h1>
+          <p>
+            Phuket attracts travelers looking for a taste of exotic Thailand.
+            The Andaman Sea's aquamarine-tinted water provides a striking
+            contrast to the stark white sand beaches and emerald jungles that
+            line the coast. Travelers to Phuket will want to spend plenty of
+            time on the beach but should also set aside some time to explore the
+            area's flavorful culinary scene, tour its impressive Buddhist
+            temples and sail or snorkel on a boat tour.
+          </p>
+          <br />
+          <a href="https://en.wikipedia.org/wiki/Phuket_Province">Wikipedia</a>
+        </div>
+      </div>
+      <div class="slide">
+        <div class="content">
+          <h1>South Island, New Zealand</h1>
+          <p>
+            It's the breathtaking natural landscape that woos adventurers to New
+            Zealand's South Island, where outdoor opportunities abound. Visitors
+            can explore the area's glaciers via helicopter, watch for wildlife
+            like whales and penguins, tour the region's wineries and stargaze on
+            top of Mount Cook. The island's many lakes and parks also invite
+            travelers to kayak, sail, hike and bike to soak up every bit of New
+            Zealand nature.
+          </p>
+          <br />
+          <a href="https://en.wikipedia.org/wiki/South_Island">View Code</a>
+        </div>
+      </div>
+      <div class="slide">
+        <div class="content">
+          <h1>London</h1>
+          <p>
+            Home to a wealth of cultural and historical institutions,
+            family-friendly attractions and festivals, plus a lively nightlife
+            scene, London appeals to travelers young and old. Must-see
+            attractions include the British Museum and Buckingham Palace, as
+            well as iconic sights like the London Eye, the Tower Bridge and Big
+            Ben. The city also features efficient and affordable public transit
+            options and there are a plethora of accommodations to choose from,
+            ranging from vacation rentals to high-end hotels.
+          </p>
+          <br />
+          <a href="https://en.wikipedia.org/wiki/London">Wikipedia</a>
+        </div>
+      </div>
+      <div class="slide">
+        <div class="content">
+          <h1>Tahiti, French Polynesia</h1>
+          <p>
+            Tranquil Tahiti offers a little bit of everything. This island
+            nation in French Polynesia is home to incredible beaches, stunning
+            natural wonders like waterfalls, and interesting museums that teach
+            visitors about the history of Tahiti. What's more, there are plenty
+            of hotel options on this island, including luxe five-star resorts
+            and no-frills, budget-friendly options.
+          </p>
+          <br />
+          <a href="https://en.wikipedia.org/wiki/Tahiti">Wikipedia</a>
+        </div>
+      </div>
+      <div class="slide">
+        <div class="content">
+          <h1>Rome</h1>
+          <p>
+            Delicious food (pizza, pasta, gelato, you name it), rich coffee and
+            excellent wine are a few reasons why travelers love Rome. However,
+            food and drink aren't the only things this city has to offer. You'll
+            find major highlights of art and history, from the Galleria Borghese
+            to the Colosseum. Meanwhile, nearby city-state Vatican City is home
+            to St. Peter's Basilica and the Sistine Chapel.
+          </p>
+          <br />
+          <a href="https://en.wikipedia.org/wiki/Rome">Wikipedia</a>
+        </div>
+      </div>
+      <div class="slide">
+        <div class="content">
+          <h1>Yellowstone National Park, Wyoming, Montana and Idaho</h1>
+          <p>
+            Travelers will be enchanted by the stimulating colors of
+            Yellowstone. The Grand Prismatic Spring's waters are reminiscent of
+            a rainbow, Yellowstone Lake is a deep blue framed by green trees and
+            snowcapped mountains. Yellowstone grants visitors the chance to see
+            all sorts of wildlife (such as bears, bison, elk and otters).
+          </p>
+          <br />
+          <a href="https://en.wikipedia.org/wiki/Yellowstone_National_Park"
+            >Wikipedia</a
+          >
+        </div>
+      </div>
+      <div class="slide">
+        <div class="content">
+          <h1>Paris</h1>
+          <p>
+            Paris is the pinnacle of art, history, culture and tourism. The City
+            of Light is home to the expansive Louvre art museum, the magical
+            Eiffel Tower and the charming Champs-Élysées lined with high-end
+            stores and boutiques. Quaint cafes and patisseries rub elbows with
+            both casual eateries and Michelin-starred restaurants in a city
+            where the food scene is second to none. What's more, Paris plays
+            host to dozens of fun festivals throughout the year. Now that you've
+            seen the top spots for 2018-19
+          </p>
+          <br />
+          <a href="https://en.wikipedia.org/wiki/Paris">View Code</a>
+        </div>
+      </div>
     </div>
-
-    <script>
-        let slide = document.querySelectorAll('.slide');
-        var current = 0;
-
-        function cls(){
-            for(let i = 0; i < slide.length; i++){
-                  slide[i].style.display = 'none';
-            }
-        }
-
-        function next(){
-            cls();
-            if(current === slide.length-1) current = -1;
-            current++;
-
-            slide[current].style.display = 'block';
-            slide[current].style.opacity = 0.4;
-
-            var x = 0.4;
-            var intX = setInterval(function(){
-                x+=0.1;
-                slide[current].style.opacity = x;
-                if(x >= 1) {
-                    clearInterval(intX);
-                    x = 0.4;
-                }
-            }, 100);
-
-        }
-
-        function prev(){
-            cls();
-            if(current === 0) current = slide.length;
-            current--;
-
-            slide[current].style.display = 'block';
-            slide[current].style.opacity = 0.4;
-
-            var x = 0.4;
-            var intX = setInterval(function(){
-                x+=0.1;
-                slide[current].style.opacity = x;
-                if(x >= 1) {
-                    clearInterval(intX);
-                    x = 0.4;
-                }
-            }, 100);
-
-        }
-
-        function start(){
-            cls();
-            slide[current].style.display = 'block';
-        }
-        start();
-    </script>
-</body>
+    <div class="buttons">
+      <button id="prev"><i class="fas fa-arrow-left"></i></button>
+      <button id="next"><i class="fas fa-arrow-right"></i></button>
+    </div>
+    <script src="src/main.js"></script>
+  </body>
 </html>
